--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express-fileupload": "^1.2.1",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.5"
+    "mongoose": "^6.1.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -31,6 +32,7 @@
     "@types/express-fileupload": "^1.2.2",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^17.0.8",
+    "@types/uuid": "^8.3.4",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
